--- a/RetrofitTest/app/src/main/res/layout/fragment_details_persons.xml
+++ b/RetrofitTest/app/src/main/res/layout/fragment_details_persons.xml
@@ -22,7 +22,8 @@
         android:layout_width="230dp"
         android:layout_height="60dp"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:ellipsize="marquee"
         app:layout_constraintBottom_toTopOf="@+id/telephone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,8 @@
         android:layout_width="230dp"
         android:layout_height="60dp"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:ellipsize="marquee"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +47,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="80dp"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:ellipsize="marquee"
         app:layout_constraintBottom_toTopOf="@+id/birthdate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +60,8 @@
         android:layout_width="230dp"
         android:layout_height="60dp"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:ellipsize="marquee"
         app:layout_constraintBottom_toTopOf="@+id/address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
