--- a/RetrofitTest/app/src/main/res/layout/fragment_details_persons.xml
+++ b/RetrofitTest/app/src/main/res/layout/fragment_details_persons.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="210dp"
+        android:id="@+id/btnDelete"
+        android:layout_width="170dp"
         android:layout_height="64dp"
         android:layout_marginTop="170dp"
         android:layout_marginBottom="100dp"
@@ -14,7 +14,7 @@
         android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnEdit"
         app:layout_constraintTop_toBottomOf="@+id/telephone" />
 
     <TextView
@@ -28,18 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/birthdate" />
-
-    <TextView
-        android:id="@+id/telephone"
-        android:layout_width="230dp"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:ellipsize="marquee"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address" />
 
     <TextView
         android:id="@+id/nameAndSurname"
@@ -66,6 +54,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameAndSurname" />
+
+    <Button
+        android:id="@+id/btnEdit"
+        android:layout_width="170dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="112dp"
+        android:text="@string/edit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
+        app:layout_constraintHorizontal_bias="0.307"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnDelete" />
+
+    <TextView
+        android:id="@+id/telephone"
+        android:layout_width="230dp"
+        android:layout_height="60dp"
+        android:ellipsize="marquee"
+        android:gravity="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/address" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
