--- a/RetrofitTest/app/src/main/res/layout/fragment_list_persons.xml
+++ b/RetrofitTest/app/src/main/res/layout/fragment_list_persons.xml
@@ -21,9 +21,10 @@
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
             android:contentDescription="@string/addperson"
-            android:src="@drawable/ic_info_blue"
+            android:src="@drawable/add_person"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="@color/floatingActionButtomListPersons"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
