--- a/RetrofitTest/app/src/main/res/layout/fragment_list_persons.xml
+++ b/RetrofitTest/app/src/main/res/layout/fragment_list_persons.xml
@@ -12,7 +12,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycledView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="#b3e5fc"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
