--- a/RetrofitTest/app/src/main/res/layout/row_adapter_list_persons.xml
+++ b/RetrofitTest/app/src/main/res/layout/row_adapter_list_persons.xml
@@ -1,15 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:gravity="center_vertical"
-    app:flow_verticalAlign="center">
+    android:layout_height="wrap_content"
+    android:background="#e1f5fe"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="5dp">
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgViewPerson"
+        android:layout_width="88dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@string/nothing"
+        android:src="@drawable/gato"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textNameAndSurname"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/txtViewNameAndSurname"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:paddingStart="10dp"
+        android:paddingEnd="5dp"
+        android:text="@string/defaultNameSurname"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgViewPerson"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtViewTelephone"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
-        android:textSize="32sp" />
-</FrameLayout>
+        android:maxLines="1"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:text="@string/defaultTelephone"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/txtViewBirthdate"
+        app:layout_constraintStart_toEndOf="@+id/imgViewPerson"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewNameAndSurname" />
+
+    <TextView
+        android:id="@+id/txtViewBirthdate"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:maxLines="1"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:text="@string/defaultDate"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtViewTelephone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtViewTelephone"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewNameAndSurname" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
