--- a/RetrofitTest/app/src/main/res/layout/fragment_list_persons.xml
+++ b/RetrofitTest/app/src/main/res/layout/fragment_list_persons.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swiperefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundScreens">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,8 +13,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycledView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#b3e5fc"/>
+            android:layout_height="match_parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -21,11 +21,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
+            android:backgroundTint="@color/floatingActionButtomListPersons"
             android:contentDescription="@string/addperson"
             android:src="@drawable/add_person"
+            app:borderWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:backgroundTint="@color/floatingActionButtomListPersons"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
