--- a/RetrofitTest/app/src/main/res/layout/fragment_edit_person.xml
+++ b/RetrofitTest/app/src/main/res/layout/fragment_edit_person.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundScreens">
 
 
     <TextView
@@ -180,6 +181,7 @@
         android:layout_marginStart="35dp"
         android:layout_marginEnd="49dp"
         android:text="@string/save_changes"
+        android:background="@drawable/btn_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
