--- a/RetrofitTest/app/src/main/res/values/colors.xml
+++ b/RetrofitTest/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="floatingActionButtomListPersons">#42a5f5</color>
+    <color name="floatingActionButtomListPersons">#b5ff97</color>
+    <color name="backgroundScreens">#f5f5f5</color>
+    <color name="colorsButtom">#b2ebf2</color>
+    <color name="rows">#FFFFFF</color>
 </resources>
