--- a/RoomTest/app/src/main/res/layout/fragment_register.xml
+++ b/RoomTest/app/src/main/res/layout/fragment_register.xml
@@ -5,43 +5,20 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/txtViewEmail"
-        android:layout_width="104dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="50dp"
-        android:text="@string/email"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/edtTextEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.121"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/edtTextEmail"
         android:layout_width="316dp"
         android:layout_height="53dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
+        android:hint="@string/email"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/txtViewPassword"
-        app:layout_constraintEnd_toEndOf="@+id/txtViewEmail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtViewEmail"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewEmail"
-        tools:ignore="TextFields" />
-
-    <TextView
-        android:id="@+id/txtViewPassword"
-        android:layout_width="106dp"
-        android:layout_height="30dp"
-        android:text="@string/password"
-        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/edtTextPassword"
-        app:layout_constraintEnd_toEndOf="@+id/edtTextEmail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/edtTextEmail"
-        app:layout_constraintTop_toBottomOf="@+id/edtTextEmail" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextFields" />
 
     <EditText
         android:id="@+id/edtTextPassword"
@@ -49,36 +26,26 @@
         android:layout_height="53dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/txtViewPasswordConfirm"
-        app:layout_constraintEnd_toEndOf="@+id/txtViewPassword"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtViewPassword"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewPassword" />
-
-    <TextView
-        android:id="@+id/txtViewPasswordConfirm"
-        android:layout_width="213dp"
-        android:layout_height="30dp"
-        android:text="@string/confirm_password"
-        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/edtTextPasswordConfirm"
-        app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
+        app:layout_constraintEnd_toEndOf="@+id/edtTextEmail"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/edtTextPassword"
-        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword" />
+        app:layout_constraintStart_toStartOf="@+id/edtTextEmail"
+        app:layout_constraintTop_toBottomOf="@+id/edtTextEmail"
+        android:hint="@string/password"/>
 
     <EditText
         android:id="@+id/edtTextPasswordConfirm"
         android:layout_width="316dp"
         android:layout_height="53dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
+        android:hint="@string/repeat_password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
-        app:layout_constraintEnd_toEndOf="@+id/txtViewPasswordConfirm"
+        app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtViewPasswordConfirm"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewPasswordConfirm" />
+        app:layout_constraintStart_toStartOf="@+id/edtTextPassword"
+        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword" />
 
     <Button
         android:id="@+id/btnRegister"
